Finished work experience and education

--- a/index.html
+++ b/index.html
@@ -188,11 +188,40 @@
 							•	Reinvented compressor selection interface to minimize product line selection tool prediction discrepancy to 3%. 
 							<br>
 							•	Ensured proper operation of over 20 plant sites through examination of real-time process indicator database.
+						</div>
+						<br>
+						<br>
+						<div class="ResumeTopic">
+		            		<span>PricewaterhouseCoopers China</span>
+			            	<p>Analyst Intern</p>
+			            </div>
+		            	<div class="description">
+							•	Organized summary on competitive features of super-agile development and digital content supply chain.  
+							<br>
+							•	Designed blueprint to represent data flow among five service lines and over 30 subsectors in a main-stream media company’s data delivery process. 
+
+
 
 						</div>
 		            </div>
 	            </div>
 	            <div class="col-md -4">
+	            	<div class="ResumeSection">
+	            		<h1>Education</h1>
+	            		<!--<img src="Pic/schoollogo.png" alt="SchoolLogo">-->
+
+						<div class="ResumeTopic">
+		            		<b>Rensselaer Polytechnic Institute</b> 				
+		            	</div>
+		            	<div class="ResumeLocation"><b>Troy, NY</b></div>
+		            	<div class="description">
+							GPA:3.62/4.00
+							<br>								            
+							Class of December 2019
+							<br>
+							Bachelor of Science in Computer Science and Chemical Engineering
+						</div>
+	            	</div>
 	            	<div class="ResumeSection">
 	            		<h1>Skills</h1>
 		            	<div class="skillbar clearfix " data-percent="80%">
@@ -200,7 +229,7 @@
 							<div class="skillbar-bar" style="background: #e67e22;"></div>
 							<div class="skill-bar-percent">Proficient</div>
 						</div> 
-						<div class="skillbar clearfix " data-percent="60%">
+						<div class="skillbar clearfix " data-percent="45%">
 							<div class="skillbar-title" style="background:#618685;"><span>Java</span></div>
 							<div class="skillbar-bar" style="background:#80ced6;"></div>
 							<div class="skill-bar-percent">Intermediate</div>
@@ -210,7 +239,7 @@
 							<div class="skillbar-bar" style="background:#ba9dc8;"></div>
 							<div class="skill-bar-percent">Proficient</div>
 						</div> 
-						<div class="skillbar clearfix " data-percent="55%">
+						<div class="skillbar clearfix " data-percent="45%">
 							<div class="skillbar-title" style="background:#47af47;"><span>Python</span></div>
 							<div class="skillbar-bar" style="background:#a9d8a2;"></div>
 							<div class="skill-bar-percent">Intermediate</div>
@@ -225,11 +254,25 @@
 							<div class="skillbar-bar" style="background:#f5aea8;"></div>
 							<div class="skill-bar-percent">Advance</div>
 						</div> 
-						<div class="skillbar clearfix " data-percent="60%">
+						<div class="skillbar clearfix " data-percent="35%">
 							<div class="skillbar-title" style="background:#dbaf59;"><span>JS</span></div>
 							<div class="skillbar-bar" style="background:#f1d6ab;"></div>
 							<div class="skill-bar-percent">Beginner</div>
 						</div> 
+	            	</div>
+	            	<div class="ResumeSection">
+	            		<h1>Honors</h1>
+	            		<!--<img src="Pic/schoollogo.png" alt="SchoolLogo">-->
+
+						<div class="ResumeTopic">
+		            		<i>Lewis Coonley Award</i> 				
+		            	</div>
+		            	<div class="ResumeTopic">
+		            		<i>Northeastern Regional Competition 3<sup>rd</sup> Place</i> 				
+		            	</div>
+		            	<div class="ResumeTopic">
+		            		<i>Dean's Honor List</i> 				
+		            	</div>
 	            	</div>
 	            </div>
 	        </div>
