Home Panel completed, working on contact panel and backend system setup

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 				<li><a href="#"  class="HoverButton" tab="#HomePanel">Home</a></li>
 				<li><a href="#"  class="HoverButton" tab="#AboutMePanel">About Me</a></li>
 				<li><a href="#"  class="HoverButton" tab="#ResumePanel">Resume</a></li>
-				<li><a href="#"  class="HoverButton" tab="#ResumePanel">Contact</a></li>
+				<li><a href="#"  class="HoverButton" tab="#ContactPanel">Contact</a></li>
 			</ul>
 		</nav>
 
@@ -27,11 +27,13 @@
 			<div class="row">
 				<div class="col-sm-7">
 					<div id="introTexts">
-						<h1>Hello! My name is Bowen</h1>
+						<h1>Hello! My name is Bowen</h1>						
+						<br>
+						<h1><i>Welcome to my personal website!</i></h1>
+						<br>
 						<p> I am a </p>
 						<p id="changeText" style="color:black">Programmer</p>
 						<p>Exploring the Tech World</p>
-						<p>Welcome to my personal website!</p>
 					</div>
 				</div>	
 				<div class="col-sm-5">
@@ -252,6 +254,9 @@
 	            	</div>
 	            </div>
 	        </div>
+		</div>
+		<div id="ContactPanel">
+			
 		</div>
 	</div>
 
